fix overflow bug & basic (mock-up) tab ui
+ scss refactoring

--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -1,4 +1,4 @@
-$c: #fe5000;
+$c: #018A01;
 $red: rgb(221, 65, 37);
 
 $loading_h0: 2rem;
@@ -84,7 +84,7 @@ body>.fs-loading {
 }
 
 #win-header {
-    width: 100vw;
+    max-width: 100vw;
     height: 2rem;
     background-color: $c;
     color: black;
@@ -93,6 +93,7 @@ body>.fs-loading {
     justify-content: space-between;
     font-weight: 600;
     user-select: none;
+    overflow: hidden;
 }
 
 .h-gr {
@@ -143,32 +144,30 @@ body>.fs-loading {
 
         &:first-child {
             background-color: #222;
-            // border-top-left-radius: .5rem;
-            // border-bottom-left-radius: .5rem;
         }
     }
 }
 
 .frames {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     padding: .2rem;
-    // display: flex;
-
+    position: fixed;
+    display: flex;
 
     .frame {
         align-items: stretch;
         display: flex;
         flex-direction: row;
+        position: relative;
         gap: .2rem;
-        // border: 1px solid red;
-        // background-color: #111;
         flex: 1 1 0;
+        flex-basis: 0 !important;
         border-radius: .3rem;
+        overflow: auto;
 
         &.flex-dir-column {
             flex-direction: column;
-            // background-color: #222;
         }
 
         &.mark-red {
@@ -212,29 +211,14 @@ body>.fs-loading {
             background-color: #222;
         }
 
-        // &.a-delete:hover {
-        //     background-color: rgb(221, 65, 37);
-        //     color: #111;
-
-        //     ~:is(.insert-frame, .tab-frame),
-        //     ~* :is(.tab-frame, .insert-frame) {
-        //         background-color: rgb(221, 65, 37) !important;
-        //         color: #111;
-        //     }
-        // }
     }
 
-    >.frame {
-        height: 100%;
-        width: 100%;
-    }
 
     .tab-frame {
         height: 100%;
         width: 100%;
         border-radius: .2rem;
         flex-direction: column;
-        // background-color: #000;
         background-color: #080808;
         position: relative;
 
@@ -251,7 +235,7 @@ body>.fs-loading {
                 background-color: #111;
                 border-radius: .2rem;
                 padding: 1rem;
-                color: #fe5000 !important;
+                color: $c  !important;
 
                 &:hover {
                     background-color: #222;
@@ -346,5 +330,51 @@ body>.fs-loading {
 
     &:hover {
         background-color: #222;
+    }
+}
+
+.tab-nav {
+    display: flex;
+    flex-direction: row;
+    height: 2.5rem;
+    background-color: #000;
+    padding: .2rem 0;
+    gap: .2rem;
+
+}
+
+.tab-menu {
+    flex: 0 0 2.1rem;
+    width: 2.1rem;
+    height: 2.1rem;
+}
+
+.tab-tab-select {
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    background-color: #000;
+    gap: .2rem;
+    position: relative;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scrollbar-width: none;
+}
+
+.tab-nav-item,
+.tab-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #080808;
+    border-radius: .3rem;
+    height: 100%;
+    padding: 0 .4rem;
+    user-select: none;
+    white-space: nowrap;
+
+    &:hover {
+        background-color: #111;
     }
 }
